--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "janus-ftl-player",
   "version": "0.0.1-alpha",
   "description": "Simple player for Janus FTL streams",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --config webpack.config.js --watch",
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "repository": {
     "type": "git",
